--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ button:focus {
 
 
 .first-section, .contact-area, .services-list, .FAQ-area-content,  .news-area, footer {
-    margin: 0% 15%;
+    width: 70%;
+    margin: auto;
 }
 
 a {
@@ -38,6 +39,10 @@ header .social-media {
     margin-left: 40px;
 }
 
+header .navbar-toggler:focus {
+    box-shadow: 0 0 0 0;
+}
+
 header .navbar-brand {
     display: flex;
     align-items: center;
@@ -57,8 +62,7 @@ main {
 }
 
 main .first-section {
-    margin: 0px auto;
-    padding:0px;
+    width: 100%;
 }
 
 main .first-section .first-section-content {
@@ -68,7 +72,7 @@ main .first-section .first-section-content {
 }
 
 main .first-section .first-section-content .left {
-    width: 20%;
+    width: 30%;
 }
 
 main .first-section .first-section-content .right {
@@ -134,11 +138,16 @@ main .about-moonchain .authors .author {
 
 main .about-moonchain .authors .author h1 {
     font-size: 22px;
+    margin: 15px auto;
 }
 
-main .about-moonchain .authors {
-    display: flex;
-    justify-content: space-between;
+main .about-moonchain .authors{
+    grid-template-columns: repeat(3, auto);
+}
+
+main .about-moonchain .authors, main .about-services .services-list {
+    display: grid;
+    gap: 20px;
 }
 
 main .about-moonchain .authors .author img {
@@ -146,9 +155,7 @@ main .about-moonchain .authors .author img {
 }
 
 main .about-services .services-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(2, auto);
 }
 
 main .about-services .service-card {
@@ -270,12 +277,4 @@ footer p {
 
 .social-media a:hover {
     color: black;
-}
-
-
-
-@keyframes appearEffect {
-    form {
-        
-    }
 }
